--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
 <body>
     <h1>RUN BUDDY</h1>
-    What We do
-    (🏃)
+    What We Do What Do Your Trainers Reach Out
+    
 </body>
 
 
