--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
         <title>Run Buddy</title>
     </head>
 <body>
-    <h1>RUN BUDDY</h1>
-    What We Do What Do Your Trainers Reach Out
+<!--navigation-->
+<header
+    ><h1>RUN BUDDY</h1>
+</header>
+
+<!-- hero/jumbotron-->    
+<section>
+</section>
+
+<!-- " what we do " section-->
+<section>
+    <h2> What We DO</h2>
+</section>
+
+<!--"meet the trainer" section-->
+<section>
+    <h2>Meet the trainer</h2>
+</section>
+
+<!-- "reach out" section-->
+<section>
+    <h2>Reach out</h2>
+</section>
+
+<!--"footer"-->
+<footer>
+    <h2>❤️ Made with love by Run Buddy</h2>
+</footer>
     
 </body>
 
