--- a/index.html
+++ b/index.html
@@ -7,9 +7,66 @@
 <body>
 <!--navigation-->
 <header
-    ><h1>RUN BUDDY</h1>
+    ><h1>
+     <a href="/">RUN BUDDY</a>
+    </h1>
+    <Nav>
+        <!-- Unorder list element -->
+        <ul>
+        <!-- list item elemnt-->
+        <li>
+        <!--- Anchor element-->
+        <a href="#what-we-do">What We Do</a>
+        </li>
+        <li>
+            <a href="#what-You-Do">What You Do</a>
+        </li>
+        <li>
+            <a href="#Your-trainers">Your trainer-yes</a>
+        </li>
+        <li>
+            <a href="#reach-out"> Reach Out</a>
+        </li>
+        </ul>
+    </Nav>
 </header>
+<section>
+    <div>
+        <h3>Get Started Today</h3>
+        <p>Fill out this form and one of our trainers will schedule a consult</p>
+    <!-- add form element--><!--hero section-->
+    <form>
+        <label for="name"> Enter full name</label>
+        <input type="text" placeholder="Your Name" name="name" id="name"/>
+        <label for="email">Enter email address</label>
+        <input type="email" placeholder="Email Address" name="email" id="email" />
+        <label for="phone">Enter a telephone number</label>
+        <input type="tel" placeholder="Phone Number" name="phone" id="phone"/>
+        <p>
+            Have you worked out with a trainer berfore?
+            <input type="radio" name="trainer-confirm" id="trainer-yes" />
+            <label for="trainer-yes">yes</label>
+            <input type="radio" name="trainer-confirm" id="trainer-no" />
+            <label for="trainer-no">No</label>
+        </p>
+        <p>
+            <label for="checkbox">
+                I acknowlege that I am at least 18 years of age.
+            </label>
+            <input type="checkbox" name="age-confirm" id="checkbox" />
+        </p>
+        <button type="submit" >
+            Get running!
+        </button>
+    </form>
+    </div>
+</section>
 
+<section>
+    <div>
+
+    </div>
+</section>
 <!-- hero/jumbotron-->    
 <section>
 </section>
