--- a/index.html
+++ b/index.html
@@ -75,8 +75,50 @@
 </section>
 
 <!-- " what we do " section-->
+<section id="what-we-do">
+    ...
+</section>
 <section>
     <h2> What We DO</h2>
+    <p>
+        butcher selfies chambray shabby chic gentrify readymade yr Echo park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origim coffe Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitt
+    </p>
+</section>
+
+<!--"What you do" section-->
+<section id="what-you-do">
+    ...
+</section>
+<section>
+    <h2>What you do</h2>
+
+<div>
+ <!-- insert this img element-->
+
+    <img src="./assets/image/step-1.svg" alt=""/>
+        <h3>Step 1: Fill Out the Form Above.</h3>
+        <p>
+            You're already here, so why not?</p>
+    </div>
+
+    <div>
+        <img src="./assets/image/step-2.svg" alt=""/>
+        <h3>Step 2: Consult with One of Our Trainers.</h3>
+        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+    </div>
+
+    <div>
+        <img src="./assets/image/step-3.svg" alt=""/>
+        <h3>Step 3: Get Running.</h3>
+        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+    </div>
+
+    <div>
+        <img src="./assets/image/step-4.svg" alt=""/>
+        <h3>Step 4: See Results.</h3>
+        <p>
+            Bi-weekly checkins with your trainer will keep you focused.</p>
+    </div>
 </section>
 
 <!--"meet the trainer" section-->
