update readme file

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     </head>
 <body>
 <!--navigation-->
-<header
-    ><h1>
-     RUN BUDDY
-    </h1>
+<header>
+    <h1>RUN BUDDY</h1>
     <Nav>
         <!-- Unorder list element -->
         <ul>
+            ...
         <!-- list item elemnt-->
         <li>
         <!--- Anchor element-->
@@ -26,7 +25,10 @@
             <a href="#Your-trainers">Your trainer </a>
         </li>
         <li>
-            <a href="#reach-out"> Reach Out</a>
+            <a href="#reach-out">Reach Out</a>
+        </li>
+        <li>
+            <a href="#your-trainer">your trainers</a>
         </li>
         </ul>
     </Nav>
@@ -75,67 +77,120 @@
 </section>
 
 <!-- " what we do " section-->
-<section id="what-we-do">
-    ...
-</section>
-<section>
-    <h2> What We DO</h2>
-    <p>
-        butcher selfies chambray shabby chic gentrify readymade yr Echo park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origim coffe Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitt
-    </p>
+<section id="what-we-do" class="intro" >
+    <h2 class="section-title primary-border">What we do</h2>
+    
+    <p> butcher selfies chambray shabby chic gentrify readymade yr Echo park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origim coffe Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitt</p> 
+
 </section>
 
 <!--"What you do" section-->
-<section id="what-you-do">
-    ...
-</section>
-<section>
-    <h2>What you do</h2>
-
+<section id="what-you-do" class="steps">
+    <h2 class="section-title secondary-border">What you DO</h2>
 <div>
  <!-- insert this img element-->
 
     <img src="./assets/image/step-1.svg" alt=""/>
-        <h3>Step 1: Fill Out the Form Above.</h3>
-        <p>
-            You're already here, so why not?</p>
+        <h3>Step 1:<span> Fill Out the Form Above.</span></h3>
+        <p>You're already here, so why not?</p>
     </div>
 
     <div>
         <img src="./assets/image/step-2.svg" alt=""/>
-        <h3>Step 2: Consult with One of Our Trainers.</h3>
+        <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
         <p>Are you here to build muscle, lose weight, or just feel good?</p>
     </div>
 
     <div>
         <img src="./assets/image/step-3.svg" alt=""/>
-        <h3>Step 3: Get Running.</h3>
+        <h3>Step 3:<span> Get Running.</span></h3>
         <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
     </div>
 
     <div>
         <img src="./assets/image/step-4.svg" alt=""/>
-        <h3>Step 4: See Results.</h3>
+        <h3>Step 4:<span> See Results.</span></h3>
         <p>
             Bi-weekly checkins with your trainer will keep you focused.</p>
     </div>
 </section>
 
-<!--"meet the trainer" section-->
-<section>
-    <h2>Meet the trainer</h2>
-</section>
+<!--"meet the 1st trainer"-->
+<section id="your-trainers" class="trainers">
+    <h2 class="section-title primary-border">
+        Meet the trainer
+    </h2>
+    <article class="trainer">
+        <img src="./assets/image/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
+    <div class="trainer-bio text-left">
+        <h3> Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+            itaque velit maiores optio dolorem excepturi aperiam dolores,voluptatibus suscipit amet quis repellat!</p>
+    </div>
+    </article>
 
+<!--end 1st trainer-->
+
+<!--2nd trainer-->
+<article class="trainer">
+    <div class="trainer-bio text right">
+    <h3> Joanna Gill</h3>
+    <h4>Endurance</h4>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+    </p>
+    </div>
+    <img src="./assets/image/trainer-2.jpg">
+</article>
+<!--end of 2nd-->
+
+<!--3rd trainer-->
+<article class="trainer">
+    <img src="./assets/image/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights"/>
+    <div class="trainer-bio text-left">
+        <h3>Harry "the Headband" smith</h3>
+        <h4>Strength</h4>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+    </div>
+</article>
+</section>
 <!-- "reach out" section-->
-<section>
-    <h2>Reach out</h2>
+<section id="reach-out" class="contact">
+    <h2 class="section-title secondary-border">Reach out</h2>
+        ...
+    <div class="contact-info">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3107.9349578218767!2d-77.0623377!3d38.83395039999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b1269d7050cd%3A0xb6162a2418c0ed0!2s3201%20Landover%20St%2C%20Alexandria%2C%20VA%2022305!5e0!3m2!1sen!2sus!4v1597084972436!5m2!1sen!2sus"
+         frameborder="0"
+          style="border:0;" 
+          allowfullscreen="" aria-hidden="false" 
+          tabindex="0">
+        </iframe>
+    <div>
+        <h3>Run Buddy</h3>
+        <p>
+            Any questions or concerna before signing up?
+            <br/>
+            Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+            3201 Landerover StreeT <br/>
+            Alexandria, Va <br/>
+            22203<br/>
+            p: 555.RUN.BUDZ (555.786.2839)<br/>
+            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+    </div>
+    </div>
 </section>
 
 <!--"footer"-->
 <footer>
     <h2>❤️ Made with love by Run Buddy</h2>
 <div>
-    <a href="#">Read Our Privacy Policy</a><br />
+    <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
     &copy; 2019 Run Buddy, Inc.
 </div>
 </footer>
