--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
     </form>
     </div>
     </div>
+    <div class="hero-cta">
+        <h2>Start Building Habits.</h2>
+        <p>
+          seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it
+          messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund
+          Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche
+          tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you
+          probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
+        </p>
+      </div>
 </section>
     <div>
 
@@ -160,8 +170,17 @@
 <!-- "reach out" section-->
 <section id="reach-out" class="contact">
     <h2 class="section-title secondary-border">Reach out</h2>
-        ...
     <div class="contact-info">
+        <form>
+            <label for="contact-name">Your Name</label>
+            <input type="text" id="contact-name" placeholder="Your Name" />
+        
+            <label for="contact-message">Message</label>
+            <textarea id="contact-message" placeholder="Message"></textarea>
+        
+            <button type="submit">Submit</button>
+          </form>
+
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3107.9349578218767!2d-77.0623377!3d38.83395039999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b1269d7050cd%3A0xb6162a2418c0ed0!2s3201%20Landover%20St%2C%20Alexandria%2C%20VA%2022305!5e0!3m2!1sen!2sus!4v1597084972436!5m2!1sen!2sus"
          frameborder="0"
           style="border:0;" 
